# CodexSwitch

./: .gitignore  DESIGN.md  README.md  index.html  package.json  vite.config.ts  yarn_tauri_dev.bat
.github/ISSUE_TEMPLATE/: bug报告.md  功能请求.md
.github/release-notes/: default.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.3.4.md  v0.3.5.md  v0.3.6.md  v0.3.7.md
.github/workflows/: release.yml
docs/: oauth-login-flow.md  release-process.md
docs/architecture/: defensive-tauri-commands.md
docs/superpowers/plans/: 2026-05-18-architecture-quality-refactor.md  (+8 more)
release/: update-policy.json
src/: App.vue  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: account_bundle.rs  accounts.rs  autoflow_oauth_server.rs  backups.rs  codex_home.rs  commands.rs  config_merge.rs  error.rs  http_client.rs  io.rs  lib.rs  locations.rs  main.rs  models.rs  network_check.rs  oauth.rs  paths.rs  process.rs  quota.rs  settings.rs
src/api/: codexSwitchApi.ts
src/components/: AppSidebar.vue  AppTitlebar.vue  DeleteAccountDialog.vue  ToastItem.vue  ToastViewport.vue  UpdateDialog.vue
src/composables/: useAccounts.ts  useBackups.ts  useNotifications.ts  useQuota.ts  useUpdater.ts  useWindowControls.ts
src/styles/: base.css  components.css  layout.css  tokens.css  views.css
src/utils/: format.ts
src/views/: AccountsView.vue  BackupsView.vue  QuotaView.vue  SettingsView.vue
(+2 files in other folders)
