[package]
name = "codex-account-switcher"
version = "0.2.5"
description = "A local Codex account switcher"
authors = ["Codex"]
edition = "2021"

[lib]
name = "codex_account_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
dirs = "6"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
toml_edit = { version = "0.22", features = ["serde"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
